y.output
Terminals unused in grammar

    RETURN
    CONTINUE
    BREAK
    VOID


State 0 conflicts: 19 shift/reduce
State 23 conflicts: 1 shift/reduce
State 24 conflicts: 6 shift/reduce
State 25 conflicts: 2 shift/reduce
State 26 conflicts: 3 shift/reduce
State 29 conflicts: 1 shift/reduce
State 42 conflicts: 19 shift/reduce, 1 reduce/reduce
State 54 conflicts: 19 shift/reduce
State 93 conflicts: 20 shift/reduce
State 98 conflicts: 1 shift/reduce
State 106 conflicts: 6 shift/reduce
State 107 conflicts: 2 shift/reduce
State 108 conflicts: 3 shift/reduce
State 116 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: StatementList

    2 TypeName: INT
    3         | FLOAT
    4         | STRING
    5         | BOOL

    6 Expression: Expression OR Expression1
    7           | Expression1

    8 Expression1: Expression1 AND Expression2
    9            | Expression2

   10 Expression2: Expression2 cmp_op Expression3
   11            | Expression3

   12 Expression3: Expression3 add_op Expression4
   13            | Expression4

   14 Expression4: Expression4 mul_op UnaryExpr
   15            | UnaryExpr

   16 UnaryExpr: PrimaryExpr
   17          | unary_op UnaryExpr

   18 cmp_op: EQL
   19       | NEQ
   20       | '<'
   21       | LEQ
   22       | '>'
   23       | GEQ

   24 add_op: '+'
   25       | '-'

   26 mul_op: '*'
   27       | '/'
   28       | '%'

   29 unary_op: '+'
   30         | '-'
   31         | '!'

   32 PrimaryExpr: Operand
   33            | IndexExpr
   34            | ConversionExpr

   35 Operand: Literal
   36        | IDENT
   37        | '(' Expression ')'

   38 Literal: INT_LIT
   39        | FLOAT_LIT
   40        | '"' STRING_LIT '"'
   41        | BOOL_LIT

   42 BOOL_LIT: TRUE
   43         | FALSE

   44 IndexExpr: PrimaryExpr '[' Expression ']'

   45 ConversionExpr: '(' TypeName ')' Expression

   46 Statement: %empty
   47          | DeclarationStmt
   48          | AssignmentStmt
   49          | IncDecStmt
   50          | Block
   51          | IfStmt
   52          | WhileStmt
   53          | ForStmt
   54          | PrintStmt
   55          | Expression SEMICOLON

   56 DeclarationStmt: TypeName IDENT SEMICOLON
   57                | TypeName IDENT '=' Expression SEMICOLON
   58                | TypeName IDENT '[' Expression ']' SEMICOLON

   59 $@1: %empty

   60 AssignmentExpr: Expression $@1 assign_op Expression

   61 AssignmentStmt: AssignmentExpr SEMICOLON

   62 assign_op: '='
   63          | ADD_ASSIGN
   64          | SUB_ASSIGN
   65          | MUL_ASSIGN
   66          | QUO_ASSIGN
   67          | REM_ASSIGN

   68 IncDecExpr: Expression INC
   69           | Expression DEC

   70 IncDecStmt: IncDecExpr SEMICOLON

   71 $@2: %empty

   72 Block: '{' $@2 StatementList '}'

   73 StatementList: Statement
   74              | StatementList Statement

   75 $@3: %empty

   76 IfStmt: IF Condition $@3 IfStmt2

   77 IfStmt2: Block

   78 $@4: %empty

   79 IfStmt2: Block ELSE $@4 IfStmt3

   80 IfStmt3: IfStmt
   81        | Block

   82 Condition: Expression

   83 $@5: %empty

   84 WhileStmt: WHILE $@5 WhileStmt2

   85 $@6: %empty

   86 WhileStmt2: '(' Condition $@6 WhileStmt3

   87 WhileStmt3: ')' Block

   88 $@7: %empty

   89 $@8: %empty

   90 ForStmt: FOR '(' SimpleExpr $@7 SEMICOLON Condition SEMICOLON $@8 IDENT ForStmt2 ')' Block

   91 ForStmt2: INC
   92         | DEC

   93 SimpleExpr: AssignmentExpr
   94           | Expression
   95           | IncDecExpr

   96 PrintStmt: PRINT '(' Expression ')' SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 31
    '"' (34) 40
    '%' (37) 28
    '(' (40) 37 45 86 90 96
    ')' (41) 37 45 87 90 96
    '*' (42) 26
    '+' (43) 24 29
    '-' (45) 25 30
    '/' (47) 27
    '<' (60) 20
    '=' (61) 57 62
    '>' (62) 22
    '[' (91) 44 58
    ']' (93) 44 58
    '{' (123) 72
    '}' (125) 72
    error (256)
    INT (258) 2
    FLOAT (259) 3
    BOOL (260) 5
    STRING (261) 4
    SEMICOLON (262) 55 56 57 58 61 70 90 96
    TRUE (263) 42
    FALSE (264) 43
    OR (265) 6
    AND (266) 8
    EQL (267) 18
    NEQ (268) 19
    LEQ (269) 21
    GEQ (270) 23
    INC (271) 68 91
    DEC (272) 69 92
    ADD_ASSIGN (273) 63
    SUB_ASSIGN (274) 64
    MUL_ASSIGN (275) 65
    QUO_ASSIGN (276) 66
    REM_ASSIGN (277) 67
    PRINT (278) 96
    RETURN (279)
    IF (280) 76
    ELSE (281) 79
    FOR (282) 90
    WHILE (283) 84
    CONTINUE (284)
    BREAK (285)
    VOID (286)
    INT_LIT <i_val> (287) 38
    FLOAT_LIT <f_val> (288) 39
    STRING_LIT <s_val> (289) 40
    IDENT <s_val> (290) 36 56 57 58 90


Nonterminals, with rules where they appear

    $accept (52)
        on left: 0
    Program (53)
        on left: 1
        on right: 0
    TypeName <s_val> (54)
        on left: 2 3 4 5
        on right: 45 56 57 58
    Expression <s_val> (55)
        on left: 6 7
        on right: 6 37 44 45 55 57 58 60 68 69 82 94 96
    Expression1 <s_val> (56)
        on left: 8 9
        on right: 6 7 8
    Expression2 <s_val> (57)
        on left: 10 11
        on right: 8 9 10
    Expression3 <s_val> (58)
        on left: 12 13
        on right: 10 11 12
    Expression4 <s_val> (59)
        on left: 14 15
        on right: 12 13 14
    UnaryExpr <s_val> (60)
        on left: 16 17
        on right: 14 15 17
    cmp_op <s_val> (61)
        on left: 18 19 20 21 22 23
        on right: 10
    add_op <s_val> (62)
        on left: 24 25
        on right: 12
    mul_op <s_val> (63)
        on left: 26 27 28
        on right: 14
    unary_op <s_val> (64)
        on left: 29 30 31
        on right: 17
    PrimaryExpr <s_val> (65)
        on left: 32 33 34
        on right: 16 44
    Operand <s_val> (66)
        on left: 35 36 37
        on right: 32
    Literal <s_val> (67)
        on left: 38 39 40 41
        on right: 35
    BOOL_LIT <s_val> (68)
        on left: 42 43
        on right: 41
    IndexExpr <s_val> (69)
        on left: 44
        on right: 33
    ConversionExpr (70)
        on left: 45
        on right: 34
    Statement (71)
        on left: 46 47 48 49 50 51 52 53 54 55
        on right: 73 74
    DeclarationStmt (72)
        on left: 56 57 58
        on right: 47
    AssignmentExpr (73)
        on left: 60
        on right: 61 93
    $@1 (74)
        on left: 59
        on right: 60
    AssignmentStmt (75)
        on left: 61
        on right: 48
    assign_op <s_val> (76)
        on left: 62 63 64 65 66 67
        on right: 60
    IncDecExpr (77)
        on left: 68 69
        on right: 70 95
    IncDecStmt (78)
        on left: 70
        on right: 49
    Block (79)
        on left: 72
        on right: 50 77 79 81 87 90
    $@2 (80)
        on left: 71
        on right: 72
    StatementList (81)
        on left: 73 74
        on right: 1 72 74
    IfStmt (82)
        on left: 76
        on right: 51 80
    $@3 (83)
        on left: 75
        on right: 76
    IfStmt2 (84)
        on left: 77 79
        on right: 76
    $@4 (85)
        on left: 78
        on right: 79
    IfStmt3 (86)
        on left: 80 81
        on right: 79
    Condition (87)
        on left: 82
        on right: 76 86 90
    WhileStmt (88)
        on left: 84
        on right: 52
    $@5 (89)
        on left: 83
        on right: 84
    WhileStmt2 (90)
        on left: 86
        on right: 84
    $@6 (91)
        on left: 85
        on right: 86
    WhileStmt3 (92)
        on left: 87
        on right: 86
    ForStmt (93)
        on left: 90
        on right: 53
    $@7 (94)
        on left: 88
        on right: 90
    $@8 (95)
        on left: 89
        on right: 90
    ForStmt2 <s_val> (96)
        on left: 91 92
        on right: 90
    SimpleExpr (97)
        on left: 93 94 95
        on right: 90
    PrintStmt (98)
        on left: 96
        on right: 54


State 0

    0 $accept: . Program $end

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    BOOL       shift, and go to state 3
    STRING     shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    PRINT      shift, and go to state 7
    IF         shift, and go to state 8
    FOR        shift, and go to state 9
    WHILE      shift, and go to state 10
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 14
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    INT        [reduce using rule 46 (Statement)]
    FLOAT      [reduce using rule 46 (Statement)]
    BOOL       [reduce using rule 46 (Statement)]
    STRING     [reduce using rule 46 (Statement)]
    TRUE       [reduce using rule 46 (Statement)]
    FALSE      [reduce using rule 46 (Statement)]
    PRINT      [reduce using rule 46 (Statement)]
    IF         [reduce using rule 46 (Statement)]
    FOR        [reduce using rule 46 (Statement)]
    WHILE      [reduce using rule 46 (Statement)]
    '+'        [reduce using rule 46 (Statement)]
    '-'        [reduce using rule 46 (Statement)]
    '('        [reduce using rule 46 (Statement)]
    '{'        [reduce using rule 46 (Statement)]
    '!'        [reduce using rule 46 (Statement)]
    INT_LIT    [reduce using rule 46 (Statement)]
    FLOAT_LIT  [reduce using rule 46 (Statement)]
    IDENT      [reduce using rule 46 (Statement)]
    '"'        [reduce using rule 46 (Statement)]
    $default   reduce using rule 46 (Statement)

    Program          go to state 20
    TypeName         go to state 21
    Expression       go to state 22
    Expression1      go to state 23
    Expression2      go to state 24
    Expression3      go to state 25
    Expression4      go to state 26
    UnaryExpr        go to state 27
    unary_op         go to state 28
    PrimaryExpr      go to state 29
    Operand          go to state 30
    Literal          go to state 31
    BOOL_LIT         go to state 32
    IndexExpr        go to state 33
    ConversionExpr   go to state 34
    Statement        go to state 35
    DeclarationStmt  go to state 36
    AssignmentExpr   go to state 37
    AssignmentStmt   go to state 38
    IncDecExpr       go to state 39
    IncDecStmt       go to state 40
    Block            go to state 41
    StatementList    go to state 42
    IfStmt           go to state 43
    WhileStmt        go to state 44
    ForStmt          go to state 45
    PrintStmt        go to state 46


State 1

    2 TypeName: INT .

    $default  reduce using rule 2 (TypeName)


State 2

    3 TypeName: FLOAT .

    $default  reduce using rule 3 (TypeName)


State 3

    5 TypeName: BOOL .

    $default  reduce using rule 5 (TypeName)


State 4

    4 TypeName: STRING .

    $default  reduce using rule 4 (TypeName)


State 5

   42 BOOL_LIT: TRUE .

    $default  reduce using rule 42 (BOOL_LIT)


State 6

   43 BOOL_LIT: FALSE .

    $default  reduce using rule 43 (BOOL_LIT)


State 7

   96 PrintStmt: PRINT . '(' Expression ')' SEMICOLON

    '('  shift, and go to state 47


State 8

   76 IfStmt: IF . Condition $@3 IfStmt2

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    Expression      go to state 48
    Expression1     go to state 23
    Expression2     go to state 24
    Expression3     go to state 25
    Expression4     go to state 26
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34
    Condition       go to state 49


State 9

   90 ForStmt: FOR . '(' SimpleExpr $@7 SEMICOLON Condition SEMICOLON $@8 IDENT ForStmt2 ')' Block

    '('  shift, and go to state 50


State 10

   84 WhileStmt: WHILE . $@5 WhileStmt2

    $default  reduce using rule 83 ($@5)

    $@5  go to state 51


State 11

   29 unary_op: '+' .

    $default  reduce using rule 29 (unary_op)


State 12

   30 unary_op: '-' .

    $default  reduce using rule 30 (unary_op)


State 13

   37 Operand: '(' . Expression ')'
   45 ConversionExpr: '(' . TypeName ')' Expression

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    BOOL       shift, and go to state 3
    STRING     shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    TypeName        go to state 52
    Expression      go to state 53
    Expression1     go to state 23
    Expression2     go to state 24
    Expression3     go to state 25
    Expression4     go to state 26
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 14

   72 Block: '{' . $@2 StatementList '}'

    $default  reduce using rule 71 ($@2)

    $@2  go to state 54


State 15

   31 unary_op: '!' .

    $default  reduce using rule 31 (unary_op)


State 16

   38 Literal: INT_LIT .

    $default  reduce using rule 38 (Literal)


State 17

   39 Literal: FLOAT_LIT .

    $default  reduce using rule 39 (Literal)


State 18

   36 Operand: IDENT .

    $default  reduce using rule 36 (Operand)


State 19

   40 Literal: '"' . STRING_LIT '"'

    STRING_LIT  shift, and go to state 55


State 20

    0 $accept: Program . $end

    $end  shift, and go to state 56


State 21

   56 DeclarationStmt: TypeName . IDENT SEMICOLON
   57                | TypeName . IDENT '=' Expression SEMICOLON
   58                | TypeName . IDENT '[' Expression ']' SEMICOLON

    IDENT  shift, and go to state 57


State 22

    6 Expression: Expression . OR Expression1
   55 Statement: Expression . SEMICOLON
   60 AssignmentExpr: Expression . $@1 assign_op Expression
   68 IncDecExpr: Expression . INC
   69           | Expression . DEC

    SEMICOLON  shift, and go to state 58
    OR         shift, and go to state 59
    INC        shift, and go to state 60
    DEC        shift, and go to state 61

    $default  reduce using rule 59 ($@1)

    $@1  go to state 62


State 23

    7 Expression: Expression1 .
    8 Expression1: Expression1 . AND Expression2

    AND  shift, and go to state 63

    AND       [reduce using rule 7 (Expression)]
    $default  reduce using rule 7 (Expression)


State 24

    9 Expression1: Expression2 .
   10 Expression2: Expression2 . cmp_op Expression3

    EQL  shift, and go to state 64
    NEQ  shift, and go to state 65
    LEQ  shift, and go to state 66
    GEQ  shift, and go to state 67
    '>'  shift, and go to state 68
    '<'  shift, and go to state 69

    EQL       [reduce using rule 9 (Expression1)]
    NEQ       [reduce using rule 9 (Expression1)]
    LEQ       [reduce using rule 9 (Expression1)]
    GEQ       [reduce using rule 9 (Expression1)]
    '>'       [reduce using rule 9 (Expression1)]
    '<'       [reduce using rule 9 (Expression1)]
    $default  reduce using rule 9 (Expression1)

    cmp_op  go to state 70


State 25

   11 Expression2: Expression3 .
   12 Expression3: Expression3 . add_op Expression4

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    '+'       [reduce using rule 11 (Expression2)]
    '-'       [reduce using rule 11 (Expression2)]
    $default  reduce using rule 11 (Expression2)

    add_op  go to state 73


State 26

   13 Expression3: Expression4 .
   14 Expression4: Expression4 . mul_op UnaryExpr

    '*'  shift, and go to state 74
    '/'  shift, and go to state 75
    '%'  shift, and go to state 76

    '*'       [reduce using rule 13 (Expression3)]
    '/'       [reduce using rule 13 (Expression3)]
    '%'       [reduce using rule 13 (Expression3)]
    $default  reduce using rule 13 (Expression3)

    mul_op  go to state 77


State 27

   15 Expression4: UnaryExpr .

    $default  reduce using rule 15 (Expression4)


State 28

   17 UnaryExpr: unary_op . UnaryExpr

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    UnaryExpr       go to state 78
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 29

   16 UnaryExpr: PrimaryExpr .
   44 IndexExpr: PrimaryExpr . '[' Expression ']'

    '['  shift, and go to state 79

    '['       [reduce using rule 16 (UnaryExpr)]
    $default  reduce using rule 16 (UnaryExpr)


State 30

   32 PrimaryExpr: Operand .

    $default  reduce using rule 32 (PrimaryExpr)


State 31

   35 Operand: Literal .

    $default  reduce using rule 35 (Operand)


State 32

   41 Literal: BOOL_LIT .

    $default  reduce using rule 41 (Literal)


State 33

   33 PrimaryExpr: IndexExpr .

    $default  reduce using rule 33 (PrimaryExpr)


State 34

   34 PrimaryExpr: ConversionExpr .

    $default  reduce using rule 34 (PrimaryExpr)


State 35

   73 StatementList: Statement .

    $default  reduce using rule 73 (StatementList)


State 36

   47 Statement: DeclarationStmt .

    $default  reduce using rule 47 (Statement)


State 37

   61 AssignmentStmt: AssignmentExpr . SEMICOLON

    SEMICOLON  shift, and go to state 80


State 38

   48 Statement: AssignmentStmt .

    $default  reduce using rule 48 (Statement)


State 39

   70 IncDecStmt: IncDecExpr . SEMICOLON

    SEMICOLON  shift, and go to state 81


State 40

   49 Statement: IncDecStmt .

    $default  reduce using rule 49 (Statement)


State 41

   50 Statement: Block .

    $default  reduce using rule 50 (Statement)


State 42

    1 Program: StatementList .
   74 StatementList: StatementList . Statement

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    BOOL       shift, and go to state 3
    STRING     shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    PRINT      shift, and go to state 7
    IF         shift, and go to state 8
    FOR        shift, and go to state 9
    WHILE      shift, and go to state 10
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 14
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    $end       reduce using rule 1 (Program)
    $end       [reduce using rule 46 (Statement)]
    INT        [reduce using rule 46 (Statement)]
    FLOAT      [reduce using rule 46 (Statement)]
    BOOL       [reduce using rule 46 (Statement)]
    STRING     [reduce using rule 46 (Statement)]
    TRUE       [reduce using rule 46 (Statement)]
    FALSE      [reduce using rule 46 (Statement)]
    PRINT      [reduce using rule 46 (Statement)]
    IF         [reduce using rule 46 (Statement)]
    FOR        [reduce using rule 46 (Statement)]
    WHILE      [reduce using rule 46 (Statement)]
    '+'        [reduce using rule 46 (Statement)]
    '-'        [reduce using rule 46 (Statement)]
    '('        [reduce using rule 46 (Statement)]
    '{'        [reduce using rule 46 (Statement)]
    '!'        [reduce using rule 46 (Statement)]
    INT_LIT    [reduce using rule 46 (Statement)]
    FLOAT_LIT  [reduce using rule 46 (Statement)]
    IDENT      [reduce using rule 46 (Statement)]
    '"'        [reduce using rule 46 (Statement)]
    $default   reduce using rule 1 (Program)

    TypeName         go to state 21
    Expression       go to state 22
    Expression1      go to state 23
    Expression2      go to state 24
    Expression3      go to state 25
    Expression4      go to state 26
    UnaryExpr        go to state 27
    unary_op         go to state 28
    PrimaryExpr      go to state 29
    Operand          go to state 30
    Literal          go to state 31
    BOOL_LIT         go to state 32
    IndexExpr        go to state 33
    ConversionExpr   go to state 34
    Statement        go to state 82
    DeclarationStmt  go to state 36
    AssignmentExpr   go to state 37
    AssignmentStmt   go to state 38
    IncDecExpr       go to state 39
    IncDecStmt       go to state 40
    Block            go to state 41
    IfStmt           go to state 43
    WhileStmt        go to state 44
    ForStmt          go to state 45
    PrintStmt        go to state 46


State 43

   51 Statement: IfStmt .

    $default  reduce using rule 51 (Statement)


State 44

   52 Statement: WhileStmt .

    $default  reduce using rule 52 (Statement)


State 45

   53 Statement: ForStmt .

    $default  reduce using rule 53 (Statement)


State 46

   54 Statement: PrintStmt .

    $default  reduce using rule 54 (Statement)


State 47

   96 PrintStmt: PRINT '(' . Expression ')' SEMICOLON

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    Expression      go to state 83
    Expression1     go to state 23
    Expression2     go to state 24
    Expression3     go to state 25
    Expression4     go to state 26
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 48

    6 Expression: Expression . OR Expression1
   82 Condition: Expression .

    OR  shift, and go to state 59

    $default  reduce using rule 82 (Condition)


State 49

   76 IfStmt: IF Condition . $@3 IfStmt2

    $default  reduce using rule 75 ($@3)

    $@3  go to state 84


State 50

   90 ForStmt: FOR '(' . SimpleExpr $@7 SEMICOLON Condition SEMICOLON $@8 IDENT ForStmt2 ')' Block

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    Expression      go to state 85
    Expression1     go to state 23
    Expression2     go to state 24
    Expression3     go to state 25
    Expression4     go to state 26
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34
    AssignmentExpr  go to state 86
    IncDecExpr      go to state 87
    SimpleExpr      go to state 88


State 51

   84 WhileStmt: WHILE $@5 . WhileStmt2

    '('  shift, and go to state 89

    WhileStmt2  go to state 90


State 52

   45 ConversionExpr: '(' TypeName . ')' Expression

    ')'  shift, and go to state 91


State 53

    6 Expression: Expression . OR Expression1
   37 Operand: '(' Expression . ')'

    OR   shift, and go to state 59
    ')'  shift, and go to state 92


State 54

   72 Block: '{' $@2 . StatementList '}'

    INT        shift, and go to state 1
    FLOAT      shift, and go to state 2
    BOOL       shift, and go to state 3
    STRING     shift, and go to state 4
    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    PRINT      shift, and go to state 7
    IF         shift, and go to state 8
    FOR        shift, and go to state 9
    WHILE      shift, and go to state 10
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '{'        shift, and go to state 14
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    INT        [reduce using rule 46 (Statement)]
    FLOAT      [reduce using rule 46 (Statement)]
    BOOL       [reduce using rule 46 (Statement)]
    STRING     [reduce using rule 46 (Statement)]
    TRUE       [reduce using rule 46 (Statement)]
    FALSE      [reduce using rule 46 (Statement)]
    PRINT      [reduce using rule 46 (Statement)]
    IF         [reduce using rule 46 (Statement)]
    FOR        [reduce using rule 46 (Statement)]
    WHILE      [reduce using rule 46 (Statement)]
    '+'        [reduce using rule 46 (Statement)]
    '-'        [reduce using rule 46 (Statement)]
    '('        [reduce using rule 46 (Statement)]
    '{'        [reduce using rule 46 (Statement)]
    '!'        [reduce using rule 46 (Statement)]
    INT_LIT    [reduce using rule 46 (Statement)]
    FLOAT_LIT  [reduce using rule 46 (Statement)]
    IDENT      [reduce using rule 46 (Statement)]
    '"'        [reduce using rule 46 (Statement)]
    $default   reduce using rule 46 (Statement)

    TypeName         go to state 21
    Expression       go to state 22
    Expression1      go to state 23
    Expression2      go to state 24
    Expression3      go to state 25
    Expression4      go to state 26
    UnaryExpr        go to state 27
    unary_op         go to state 28
    PrimaryExpr      go to state 29
    Operand          go to state 30
    Literal          go to state 31
    BOOL_LIT         go to state 32
    IndexExpr        go to state 33
    ConversionExpr   go to state 34
    Statement        go to state 35
    DeclarationStmt  go to state 36
    AssignmentExpr   go to state 37
    AssignmentStmt   go to state 38
    IncDecExpr       go to state 39
    IncDecStmt       go to state 40
    Block            go to state 41
    StatementList    go to state 93
    IfStmt           go to state 43
    WhileStmt        go to state 44
    ForStmt          go to state 45
    PrintStmt        go to state 46


State 55

   40 Literal: '"' STRING_LIT . '"'

    '"'  shift, and go to state 94


State 56

    0 $accept: Program $end .

    $default  accept


State 57

   56 DeclarationStmt: TypeName IDENT . SEMICOLON
   57                | TypeName IDENT . '=' Expression SEMICOLON
   58                | TypeName IDENT . '[' Expression ']' SEMICOLON

    SEMICOLON  shift, and go to state 95
    '='        shift, and go to state 96
    '['        shift, and go to state 97


State 58

   55 Statement: Expression SEMICOLON .

    $default  reduce using rule 55 (Statement)


State 59

    6 Expression: Expression OR . Expression1

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    Expression1     go to state 98
    Expression2     go to state 24
    Expression3     go to state 25
    Expression4     go to state 26
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 60

   68 IncDecExpr: Expression INC .

    $default  reduce using rule 68 (IncDecExpr)


State 61

   69 IncDecExpr: Expression DEC .

    $default  reduce using rule 69 (IncDecExpr)


State 62

   60 AssignmentExpr: Expression $@1 . assign_op Expression

    ADD_ASSIGN  shift, and go to state 99
    SUB_ASSIGN  shift, and go to state 100
    MUL_ASSIGN  shift, and go to state 101
    QUO_ASSIGN  shift, and go to state 102
    REM_ASSIGN  shift, and go to state 103
    '='         shift, and go to state 104

    assign_op  go to state 105


State 63

    8 Expression1: Expression1 AND . Expression2

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    Expression2     go to state 106
    Expression3     go to state 25
    Expression4     go to state 26
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 64

   18 cmp_op: EQL .

    $default  reduce using rule 18 (cmp_op)


State 65

   19 cmp_op: NEQ .

    $default  reduce using rule 19 (cmp_op)


State 66

   21 cmp_op: LEQ .

    $default  reduce using rule 21 (cmp_op)


State 67

   23 cmp_op: GEQ .

    $default  reduce using rule 23 (cmp_op)


State 68

   22 cmp_op: '>' .

    $default  reduce using rule 22 (cmp_op)


State 69

   20 cmp_op: '<' .

    $default  reduce using rule 20 (cmp_op)


State 70

   10 Expression2: Expression2 cmp_op . Expression3

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    Expression3     go to state 107
    Expression4     go to state 26
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 71

   24 add_op: '+' .

    $default  reduce using rule 24 (add_op)


State 72

   25 add_op: '-' .

    $default  reduce using rule 25 (add_op)


State 73

   12 Expression3: Expression3 add_op . Expression4

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    Expression4     go to state 108
    UnaryExpr       go to state 27
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 74

   26 mul_op: '*' .

    $default  reduce using rule 26 (mul_op)


State 75

   27 mul_op: '/' .

    $default  reduce using rule 27 (mul_op)


State 76

   28 mul_op: '%' .

    $default  reduce using rule 28 (mul_op)


State 77

   14 Expression4: Expression4 mul_op . UnaryExpr

    TRUE       shift, and go to state 5
    FALSE      shift, and go to state 6
    '+'        shift, and go to state 11
    '-'        shift, and go to state 12
    '('        shift, and go to state 13
    '!'        shift, and go to state 15
    INT_LIT    shift, and go to state 16
    FLOAT_LIT  shift, and go to state 17
    IDENT      shift, and go to state 18
    '"'        shift, and go to state 19

    UnaryExpr       go to state 109
    unary_op        go to state 28
    PrimaryExpr     go to state 29
    Operand         go to state 30
    Literal         go to state 31
    BOOL_LIT        go to state 32
    IndexExpr       go to state 33
    ConversionExpr  go to state 34


State 78

   17 UnaryExpr: unary_op UnaryExpr .

    $default  reduce using rule 17 (UnaryExpr)


State 79

   44 IndexExpr: PrimaryExpr '[' . Expression ']'
